--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-easy-data-table": "^1.5.42"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
